# zoinks

./: .gitignore  CHANGES.md  CITATION.cff  CONTRIBUTING.md  LICENSE  LICENSE.html  Makefile  README.md  SUPPORT.md  codemeta.json  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
dev/icon/: README.md
dev/unused-code/: unused.py
dev/unused-code/zoinks-pyzotero/: __main__.py  main_body.py
zoinks/: __init__.py  __main__.py  exceptions.py  exit_codes.py
