# =============================================================================
# @file    setup.cfg
# @brief   Package metadata and PyPI configuration
# @created 2021-10-16
# @license Please see the file named LICENSE in the project directory
# @website https://github.com/mhucka/zoinks
# =============================================================================

[metadata]
name          = zoinks
version       = 0.0.6
description   = Zoinks: a command-line utility to retrieve Zotero record values
author        = Mike Hucka
author_email  = mhucka@caltech.edu
license       = BSD 3-clause license
license_files = LICENSE
url           = https://github.com/mhucka/zoinks
# The remaining items below are used by PyPI.
project_urls  =
  Source Code = https://github.com/mhucka/zoinks
  Bug Tracker = https://github.com/mhucka/zoinks/issues
keywords      = Python, applications
classifiers   =
  Development Status :: 3 - Alpha
  Environment :: Console
  License :: OSI Approved :: BSD License
  Intended Audience :: Science/Research
  Operating System :: MacOS :: MacOS X
  Programming Language :: Python
  Programming Language :: Python :: 3.8
long_description = file:README.md
long_description_content_type = text/markdown

[options]
packages = find:
zip_safe = False
python_requires = >= 3.8

[options.entry_points]
console_scripts = 
  zoinks = zoinks.__main__:console_scripts_main
